--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,3 @@
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-  background-color: #111;
-  color: #bbb;
-}
-
-a{
-  text-decoration: none;
-  color: inherit;
-}
-
-.container{
-  background-color: rebeccapurple;
-}
-.contact{
-  background-color: aqua;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
